force-app/main/default/objects/Big_Object_Configuration__c/Big_Object_Configuration__c.object-meta.xml
<CustomObject>
    <label>Big Object Configuration</label>
    <nameField>
        <displayFormat>BOC-{00000}</displayFormat>
        <label>Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Big Object Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>