force-app/main/default/objects/Big_Object_Configuration__c/fields/List_View_Name__c.field-meta.xml
<CustomField>
    <fullName>List_View_Name__c</fullName>
    <label>List View Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>