force-app/main/default/objects/Big_Object_Configuration__c/fields/Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_API_Name__c</fullName>
    <inlineHelpText>Object Name of source data</inlineHelpText>
    <label>Source Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>