force-app/main/default/objects/Big_Object_Configuration__c/fields/Total_Indexed_Fields__c.field-meta.xml
<CustomField>
    <fullName>Total_Indexed_Fields__c</fullName>
    <label>Total Indexed Fields</label>
    <summaryFilterItems>
        <field>Big_Object_Field_Configuration__c.Indexed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Big_Object_Field_Configuration__c.Big_Object_Configuration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>