force-app/main/default/objects/Big_Object_Configuration__c/listViews/All_Objects.listView-meta.xml
<ListView>
    <fullName>All_Objects</fullName>
    <columns>NAME</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Big_Object_API_Name__c</columns>
    <columns>Total_Indexed_Fields__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Objects</label>
</ListView>